# snowflake-ml

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  vendorize.toml
.github/workflows/: deploy_ml.yaml  eval_ml.yaml
.streamlit/: config.toml  settings.toml
dashboard/: app.py  layout_utils.py  snowflake_helpers.py  👋_hello.py
dashboard/pages/: 1_📊_data_overview.py  2_🧠_machine_learning.py  3_💡_about.py  aggregated.py
docker/: .gitignore  README.md  kafka-connect-reddit.Dockerfile
scripts/: __init__.py  create_huggingface_model.py  create_inference_udf.py  create_materialized_views.py  create_toxic_dataset.py  eval.py  eval_ml_model.py  snowflake_utils.py  train.py  train_ml_model.py  write.py
snowflake_ml/: __init__.py  model.py  snowflake_utils.py
snowflake_ml/_vendor/inflection-0.5.1.dist-info/: RECORD
snowflake_ml/_vendor/profanityfilter/: console.py  profanityfilter.py
snowflake_ml/_vendor/profanityfilter-2.0.6.dist-info/: METADATA  RECORD  entry_points.txt  top_level.txt
sql/: aggregated_comments.sql  aggregated_posts.sql  flattened_comments.sql  flattened_comments_typed.sql  flattened_posts.sql  flattened_posts_typed.sql
sql/tasks/: clean_ml_posts.sql  get_new_posts.sql  predict_ml_posts.sql
terraform/: .gitignore  confluent.tf  default.auto.tfvars  main.tf  outputs.tf  snowflake_compute.tf  snowflake_data.tf  snowflake_data_grants.tf  snowflake_tasks.tf  snowflake_tasks_grants.tf  snowflake_user.tf  stages.tf  variables.tf
