[tool.poetry]
name = "snowflake-ml"
version = "0.1.0"
description = ""
authors = ["Murilo Cunha <murilo@dataroots.io>"]

[tool.poetry.dependencies]
python = "~3.8"
snowflake-snowpark-python = "^0.7.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Devtools not in environment, but used in `pre-commit`
[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
